--- a/public/tpl/conditions.html.twig
+++ b/public/tpl/conditions.html.twig
@@ -17,7 +17,7 @@
     <p>L'équipe CafeLatte sera libre de supprimer tout commentaire ou critique comportant des propos violant des dispositions légales ou réglementaires, ou contraires à la présente charte. Cette possibilité n'est pas exclusive de la possibilité prévue
     à l'article précédent de suspendre ou supprimer le compte de l’utilisateur, le cas échéant.</p>
     <p>CafeLatte veille au respect des erreurs d’expression (orthographe, typographie…) mais ne peut tout rectifier. Les réactions entièrement formulées en lettres capitales (majuscules) ou dont le sens est rendu incertain
-    par des abréviations ou des erreurs de langage (orthographe, vocabulaire, syntaxe, grammaire, message vide ou illisible, langage SMS) ne seront pas retenues. AlloCiné se réserve la possibilité d’interrompre un débat qui deviendrait redondant ou qui
+    par des abréviations ou des erreurs de langage (orthographe, vocabulaire, syntaxe, grammaire, message vide ou illisible, langage SMS) ne seront pas retenues. CafeLatte se réserve la possibilité d’interrompre un débat qui deviendrait redondant ou qui
     serait investi par un flux de militants pour quelque cause que ce soit en supprimant l’accès à ses services (prosélytisme religieux, secte, attaque d’une religion…).</p>
 
     {% endblock %}
