--- a/public/tpl/edit-profil.html.twig
+++ b/public/tpl/edit-profil.html.twig
@@ -45,7 +45,7 @@
 
             {% endif %}
             {% if deleteMyAccount %}
-              <input type="submit" value="Supprimer mon profil !"></button>
+              <button type="submit" value="Supprimer mon profil !">Supprimer mon profil !</button>
             {% else %}
               <button type="submit">Mettre à jour mon profil !</button>
             {% endif %}
