--- a/public/tpl/modelspages/index.html.twig
+++ b/public/tpl/modelspages/index.html.twig
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="cinéVore" />
     <meta property="og:url" content="https://www.cinéVore.com" />
-    <meta property="og:image" content="{{ docRoot }}public/images/popcorn.jpg" />
+    <meta property="og:image" content="{{ docRoot }}public/images/test.png" />
     <meta property="og:image:width" content="250" />
     <meta property="og:image:height" content="221" />
     <meta property="og:site_name" content="cinéVore" />
@@ -22,13 +22,14 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
-    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Slab" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Limelight" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
     <link rel="stylesheet" href="{{ docRoot }}public/css/core.css">
 </head>
 
-<body id="body" class="container-fluid">
+<body id="body">
 
     {% include 'modelspages/navbar.html.twig' ignore missing %}
 
