--- a/public/css/core.css
+++ b/public/css/core.css
@@ -1,278 +1,421 @@
 body {
-  background-color: black;
-  font-family: 'Josefin Slab', serif;
+  background-color: #141212;
+  font-family: "Exo 2", sans-serif;
   color: #fffae9;
-  font-size: 1em; }
+  font-size: 1em;
+}
+body h1 {
+  font-size: 4em;
+  text-align: left;
+  font-family: "Limelight", cursive;
+}
+body h2 {
+  font-size: 3em;
+  text-shadow: 1px 2px 2px black;
+}
+body h3 {
+  font-size: 2.2em;
+  padding: 0.5em;
+  padding-left: 1.5em;
+  background-image: linear-gradient(to left, #141212 70%, #7c0707 95%, red);
+  border-radius: 5px;
+}
+body h4 {
+  font-size: 2em;
+  text-shadow: 1px 2px 2px black;
+}
+body p {
+  font-size: 1.5em;
+}
+body #navbar {
+  background-image: linear-gradient(to bottom, black 70%, #7c0707 95%, red);
+  border-bottom: 2px solid black;
+}
+body nav #titres {
+  z-index: 5;
+  text-align: right;
+}
+body nav #search {
+  align-items: center;
+  justify-content: flex-end;
+  display: flex;
+}
+body nav #search input {
+  background-color: transparent;
+  border: 2px solid #fffae9;
+  padding: 15px 7px 4px 7px;
+  border-radius: 5px;
+}
+body nav #search:active, body nav #search:hover {
+  outline: none;
+}
+body nav #search input::placeholder {
+  color: #fffae9;
+  opacity: 0.5;
+  font-size: 1.5em;
+}
+body nav #search button button:focus {
+  outline: none;
+  box-shadow: none;
+}
+body nav #search button:hover {
+  opacity: 0.5;
+}
+body nav #search button i {
+  font-size: 2em;
+  color: #fffae9;
+}
+body nav .navbar-toggler-icon {
+  background-image: url("https://cdn4.iconfinder.com/data/icons/wirecons-free-vector-icons/32/menu-alt-512.png");
+  background-color: #fffae9;
+}
+body nav a {
+  color: #fffae9;
+  font-weight: 500;
+  font-size: 1.5em;
+  display: block;
+}
+body nav a i {
+  font-size: 1.5em;
+  color: inherit;
+}
+body nav a:hover {
+  color: #fffae9;
+  opacity: 0.5;
+  background-color: transparent;
+}
+body nav .dropdown-menu.show {
+  background-color: #fffae9;
+}
+body #header {
+  background-color: black;
+}
+body #header h3 {
+  font-size: 2em;
+  padding: 0.5em;
+  text-shadow: 1px 2px 2px grey;
+  border: none;
+}
+body #header #footerimg {
+  background-image: url(../images/seat.png);
+  background-position: center;
+  background-size: cover;
+  background-repeat: repeat-x;
+  width: 100%;
+  height: 200px;
+  margin-top: 50PX;
+}
+body #header #rowtitre #titres {
+  z-index: 5;
+  text-align: center;
+}
+body #header #rowtitre #titres h3 {
+  background-image: none;
+}
+body #header .carousel-inner .carousel-item {
+  max-height: 350px;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+body #header .carousel-inner .carousel-item .carousel-caption {
+  background-color: rgba(0, 0, 0, 0.5);
+  text-shadow: 1px 2px 2px black;
+}
+body main a {
+  color: #fffae9;
+}
+body main a:hover {
+  color: #fffae9;
+  text-decoration: none;
+  opacity: 0.5;
+}
+body main #filmMain #affiche {
+  background-image: url("../images/{{ film.affiche }}.jpg");
+  background-size: cover;
+  width: 100%;
+  height: 200px;
+}
+body main #filmMain h4 {
+  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  font-size: 2em;
+}
+body main #filmMain li {
+  list-style: none;
+  color: #fffae9;
+  font-size: 1.5em;
+}
+body main #blocfilm {
+  text-align: center;
+  padding: 0px;
+  margin-bottom: 60px;
+  max-width: 95%;
+}
+body main #blocfilm h4,
+body main #blocfilm p,
+body main #blocfilm a {
+  color: #fffae9;
+}
+body main #blocfilm:hover {
+  text-decoration: none;
+  opacity: 0.7;
+}
+body main #blocfilm hr {
+  background-color: #fffae9;
+}
+body main h2 {
+  text-align: center;
+  margin-bottom: 60px;
+}
+body main #titleconnect,
+body main #titleedit {
+  padding-top: 100px;
+}
+body main button {
+  margin: 20px 0px;
+  border-radius: 5px;
+  background-color: #fffae9;
+  border: none;
+  padding: 10px;
+  margin-right: 20px;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+body main button:focus {
+  outline: none;
+}
+body main label,
+body main legend {
+  font-size: 1.8em;
+}
+body main input {
+  background-color: transparent;
+  font-size: 1.5em;
+  color: #fffae9;
+  border-color: #fffae9;
+  padding: 15px 7px 4px 7px;
+  margin-bottom: 30px;
+  border-radius: 5px;
+}
+body main input:focus, body main input:active {
+  outline: none;
+}
+body main textarea {
+  background-color: transparent;
+  height: 200px;
+  width: 100%;
+  font-size: 1.5em;
+  color: #fffae9;
+  border-color: #fffae9;
+  padding: 15px 7px 4px 7px;
+  margin-bottom: 30px;
+}
+body main textarea:focus, body main textarea:active {
+  outline: none;
+}
+body main #navbarNav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+body main #navbarNav li {
+  font-size: 1.2em;
+  padding: 10px;
+  border: 3px solid #7c0707;
+  border-radius: 5px;
+  margin: 5px;
+  margin-bottom: 40px;
+}
+body footer {
+  padding: 1em;
+  width: 100%;
+  background-color: #141212;
+  display: flex;
+}
+body footer #footer-title {
+  background-color: #7c0707;
+  color: #141212;
+  font-weight: 900;
+  text-align: center;
+  font-size: 1.2em;
+}
+body footer ul {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+body footer ul li {
+  list-style: none;
+  display: inline;
+  font-size: 4em;
+  padding: 0px 20px;
+}
+body footer ul li i {
+  color: #fffae9;
+}
+body footer ul li i:hover {
+  color: #fffae9;
+  opacity: 0.5;
+}
+body footer form {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+body footer form input {
+  color: #fffae9;
+  font-size: 1.5em;
+  background-color: transparent;
+  border: 2px solid #fffae9;
+  padding: 15px 7px 4px 7px;
+  margin-left: 60px;
+}
+body footer form input:active, body footer form input:hover {
+  outline: none;
+}
+body footer form input input::placeholder {
+  color: #fffae9;
+  opacity: 0.5;
+  font-size: 1.5em;
+}
+body footer form #btnnews {
+  background-color: transparent;
+  color: #fffae9;
+  border-color: transparent;
+  align-items: center;
+}
+body footer form #btnnews i {
+  font-size: 4em;
+  margin-left: 10px;
+}
+body footer form #btnnews i:hover {
+  color: #fffae9;
+  opacity: 0.5;
+}
+body footer p {
+  display: flex;
+  justify-content: center;
+}
+body footer p a {
+  font-size: 1.2em;
+  color: #fffae9 !important;
+}
+body footer p a:hover {
+  color: #fffae9;
+  opacity: 0.5;
+  text-decoration: none;
+}
+@media all and (min-width: 1024px) and (max-width: 1280px) {
+  body #loupe {
+    font-size: 1em !important;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1024px) {
   body h1 {
-    font-size: 4em;
-    text-align: left;
-    font-family: 'Limelight', cursive; }
+    font-size: 3.5em !important;
+  }
   body h2 {
-    font-size: 3em;
-    text-shadow: 1px 2px 2px black; }
+    font-size: 2em !important;
+  }
   body h3 {
-    font-size: 2em;
-    padding: .5em;
-    padding-left: 1.5em;
-    text-shadow: 1px 2px 2px grey;
-    border-bottom: 2px solid #7c0707;
-    border-left: 2px solid #7c0707;
-    border-radius: 2em 0 0 2em; }
-  body h4 {
     font-size: 1.8em;
-    text-shadow: 1px 2px 2px black; }
-  body p {
-    font-size: 1.5em; }
-  body #navbar {
-    background-image: linear-gradient(to bottom, black 70%, maroon 95%, red);
-    border-bottom: 2px solid black; }
-  body nav {
-    background-color: black; }
-    body nav #titres {
-      z-index: 5;
-      text-align: justify;
-      margin-left: -10px; }
-    body nav input {
-      background-color: transparent;
-      max-width: 70%;
-      border: 1px solid #fffae9;
-      padding: 5px; }
-    body nav input:active {
-      border: none; }
-    body nav input::placeholder {
-      color: #fffae9;
-      opacity: 0.5;
-      font-size: 1em; }
-    body nav .navbar-toggler-icon {
-      background-image: url("https://cdn4.iconfinder.com/data/icons/wirecons-free-vector-icons/32/menu-alt-512.png");
-      background-color: #fffae9; }
-    body nav a {
-      color: #fffae9;
-      font-weight: 500;
-      font-size: 1.5em; }
-    body nav a:hover {
-      color: #fffae9;
-      opacity: 0.5;
-      background-color: transparent; }
-    body nav .dropdown-menu.show {
-      background-color: #fffae9; }
-  body #header h3 {
-    font-size: 2em;
-    padding: .5em;
-    text-shadow: 1px 2px 2px grey;
-    background-color: black;
-    border: none; }
-  body #header #footerimg {
-    background-image: url(../images/seat.png);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 200px;
-    margin-top: 50PX; }
-  body #header #rowtitre #titres {
-    z-index: 5;
-    text-align: center; }
-  body #header .carousel-inner .carousel-item {
-    max-height: 500px;
-    position: relative;
-    background-color: rgba(0, 0, 0, 0.5); }
-    body #header .carousel-inner .carousel-item .carousel-caption {
-      background-color: rgba(0, 0, 0, 0.5);
-      text-shadow: 1px 2px 2px black; }
-  body main a {
-    color: #fffae9; }
-    body main a:hover {
-      color: #fffae9; }
-  body main #filmMain #affiche {
-    background-image: url("../images/{{ film.affiche }}.jpg");
-    background-size: cover;
-    width: 100%;
-    height: 200px; }
-  body main #filmMain h4 {
-    text-align: center;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    font-size: 1.6em; }
-  body main #filmMain #footerimg {
-    margin-top: 70px;
-    background-image: url(../images/seat.png);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    height: 300px; }
-  body main #filmMain li {
-    list-style: none;
-    color: #fffae9;
-    font-size: 1.1em; }
-  body main #blocfilm {
-    padding: 2em;
-    text-align: center; }
-    body main #blocfilm h4,
-    body main #blocfilm p,
-    body main #blocfilm a {
-      color: #fffae9; }
-    body main #blocfilm:hover {
-      text-decoration: none;
-      opacity: 0.7; }
-  body main h2 {
-    text-align: center; }
-  body main #titleconnect,
-  body main #titleedit {
-    padding-top: 100px; }
-  body main button {
-    margin: 10px;
-    border-radius: 5px;
-    background-color: #fffae9;
-    border: none;
-    padding: 5px; }
-  body main input,
-  body main textarea {
-    background-color: transparent;
-    color: #fffae9;
-    border-color: #fffae9;
-    padding: 5px;
-    max-width: 70%;
-    margin-bottom: 10px; }
-    body main input .navbar-toggler-icon,
-    body main textarea .navbar-toggler-icon {
-      color: #fffae9;
-      background-color: #fffae9;
-      background-image: url("https://cdn4.iconfinder.com/data/icons/wirecons-free-vector-icons/32/menu-alt-512.png"); }
-  body main #navbarNav li {
-    font-size: 0.8em;
-    padding: 10px;
-    border: 2px solid #7c0707;
-    border-radius: 5px;
-    margin: 5px;
-    margin-bottom: 40px; }
-  body footer {
-    padding: 1em;
-    width: 100%;
-    background-color: black;
-    padding: 1em; }
-    body footer #footer-title {
-      background-color: #7c0707;
-      color: black;
-      font-weight: bold;
-      text-align: center;
-      margin-top: -20px;
-      font-size: 1em; }
-    body footer input::placeholder {
-      color: #fffae9;
-      opacity: 0.5; }
-    body footer input {
-      color: #fffae9; }
-      body footer input :hover {
-        background-color: transparent;
-        border: none; }
-      body footer input input :active {
-        background-color: grey; }
-    body footer #newsletter {
-      border: 1px solid #fffae9;
-      max-width: 80%;
-      max-height: 50px;
-      background-color: transparent;
-      padding: 5px; }
-    body footer #btnnews {
-      background-color: transparent;
-      color: #fffae9;
-      border-color: transparent;
-      font-size: 2.5em;
-      align-items: center;
-      margin-top: 10px; }
-    body footer a {
-      font-size: 0.8em;
-      color: #fffae9 !important; }
-    body footer a:hover {
-      color: #7c0707;
-      text-decoration: none; }
-    body footer li {
-      list-style: none;
-      display: inline;
-      font-size: 3em;
-      margin-right: 10px; }
-    body footer div div h3 {
-      background-color: black !important; }
-  @media all and (min-width: 1024px) and (max-width: 1280px) {
-    body #loupe {
-      font-size: 1em !important; } }
-  @media screen and (min-width: 768px) and (max-width: 1024px) {
-    body h1 {
-      font-size: 3.5em !important; }
-    body h2 {
-      font-size: 2em !important; }
-    body h3 {
-      font-size: 1.8em; }
-    body input::placeholder,
-    body #loupe,
-    body #newsletter,
-    body #btnnews,
-    body a,
-    body li {
-      font-size: 1em !important; } }
-  @media screen and (min-width: 425px) and (max-width: 768px) {
-    body h1 {
-      font-size: 2.5em !important; }
-    body h2 {
-      font-size: 1.5em !important; }
-    body h3 {
-      font-size: 1em; }
-    body input::placeholder,
-    body #loupe,
-    body #newsletter,
-    body a,
-    body #btnnews,
-    body li {
-      font-size: 0.8em !important; } }
-  @media screen and (min-width: 375px) and (max-width: 425px) {
-    body h1 {
-      font-size: 2.5em !important; }
-    body h2 {
-      font-size: 1.5em !important; }
-    body h3 {
-      font-size: 1em; }
-    body input::placeholder,
-    body #newsletter,
-    body a,
-    body #btnnews,
-    body li {
-      font-size: 0.8em !important; }
-    body #loupe,
-    body #divimg {
-      display: none; } }
-  @media all and (min-width: 320px) and (max-width: 375px) {
-    body h1 {
-      font-size: 2.5em !important; }
-    body h2 {
-      font-size: 1em !important; }
-    body h3,
-    body p {
-      font-size: 1em; }
-    body input::placeholder,
-    body #newsletter,
-    body a,
-    body #btnnews,
-    body li {
-      font-size: 0.8em !important; }
-    body #loupe,
-    body #divimg {
-      display: none; } }
-  @media screen and (max-width: 320px) {
-    body h1 {
-      font-size: 1.8em !important; }
-    body h2 {
-      font-size: 0.8em !important; }
-    body h3,
-    body p {
-      font-size: 0.6em; }
-    body input::placeholder,
-    body #newsletter,
-    body a,
-    body #btnnews,
-    body li {
-      font-size: 0.5em !important; }
-    body #loupe,
-    body #divimg {
-      display: none; } }
+  }
+  body input::placeholder,
+body #loupe,
+body #newsletter,
+body #btnnews,
+body a,
+body li {
+    font-size: 1em !important;
+  }
+}
+@media screen and (min-width: 425px) and (max-width: 768px) {
+  body h1 {
+    font-size: 2.5em !important;
+  }
+  body h2 {
+    font-size: 1.5em !important;
+  }
+  body h3 {
+    font-size: 1em;
+  }
+  body input::placeholder,
+body #loupe,
+body #newsletter,
+body a,
+body #btnnews,
+body li {
+    font-size: 0.8em !important;
+  }
+}
+@media screen and (min-width: 375px) and (max-width: 425px) {
+  body h1 {
+    font-size: 2.5em !important;
+  }
+  body h2 {
+    font-size: 1.5em !important;
+  }
+  body h3 {
+    font-size: 1em;
+  }
+  body input::placeholder,
+body #newsletter,
+body a,
+body #btnnews,
+body li {
+    font-size: 0.8em !important;
+  }
+  body #loupe,
+body #divimg {
+    display: none;
+  }
+}
+@media all and (min-width: 320px) and (max-width: 375px) {
+  body h1 {
+    font-size: 2.5em !important;
+  }
+  body h2 {
+    font-size: 1em !important;
+  }
+  body h3,
+body p {
+    font-size: 1em;
+  }
+  body input::placeholder,
+body #newsletter,
+body a,
+body #btnnews,
+body li {
+    font-size: 0.8em !important;
+  }
+  body #loupe,
+body #divimg {
+    display: none;
+  }
+}
+@media screen and (max-width: 320px) {
+  body h1 {
+    font-size: 1.8em !important;
+  }
+  body h2 {
+    font-size: 0.8em !important;
+  }
+  body h3,
+body p {
+    font-size: 0.6em;
+  }
+  body input::placeholder,
+body #newsletter,
+body a,
+body #btnnews,
+body li {
+    font-size: 0.5em !important;
+  }
+  body #loupe,
+body #divimg {
+    display: none;
+  }
+}
 
 /*# sourceMappingURL=core.css.map */
