--- a/public/tpl/modelspages/carousel.html.twig
+++ b/public/tpl/modelspages/carousel.html.twig
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
     <div class="row" id="rowtitre">
         <div class="col-12" id="titres">
             <h3>Le site référence des amoureux du cinéma qui veulent...</h3>
@@ -80,6 +80,6 @@
             </a>
         </div>
     </div>
-    <div class="row">
-        <div id="footerimg" class="col-12">
-        </div>
+    <div class="row" id="footerimg">
+    
+   </div>
