--- a/public/tpl/modelspages/footer.html.twig
+++ b/public/tpl/modelspages/footer.html.twig
@@ -15,9 +15,9 @@
             <div class="col-4">
                 <h3>Retrouvez-nous</h3>
                 <ul>
-                    <li><a href="https://www.facebook.com"><i class="fab fa-facebook-square"></i></a></li>
-                    <li><a href="https://www.twitter.com"><i class="fab fa-twitter-square"></i></a></li>
-                    <li><a href="https://www.linkedin.com"><i class="fab fa-linkedin"></i></a></li>
+                    <li><a href="https://www.facebook.com" target="blank"><i class="fab fa-facebook-square"></i></a></li>
+                    <li><a href="https://www.twitter.com" target="blank"><i class="fab fa-twitter-square"></i></a></li>
+                    <li><a href="https://www.linkedin.com" target="blank"><i class="fab fa-linkedin"></i></a></li>
                 </ul>
             </div>
 
@@ -31,8 +31,7 @@
 
             <div class="col-3">
                 <h3>A propos</h3>
-                <p><a href="{{ docRoot }}conditions">Conditions générales</a></p>
-                <p><a href="{{ docRoot }}mentions">Mentions légales</a></p>
+                <p><a href="{{ docRoot }}conditions">Conditions générales </a></p><p><a href="{{ docRoot }}mentions"> Mentions légales</a></p>
             </div>
         </div>
     </div>
